<resources>
    <string name="app_name">lastfm</string>

    <string name="track_list_fragment_title">Tracks</string>
    <string name="artist_list_fragment_title">Artists</string>
    <string name="duration">Duration: </string>
    <string name="listeners">Listeners: </string>
    <string name="artists">Artists</string>
    <string name="view_details">View Details</string>
    <string name="view_artist">View Artist</string>
    <string name="search_hint">Search</string>
</resources>
